tests/fixtures/errors/required_param_not_pub.gcl
// Error: required param is not marked `pub`.
param x: Dimensionless;
